@@ -60,7 +60,7 @@
  '(eshell-cmpl-cycle-completions nil)
  '(eshell-prefer-to-shell t nil (eshell))
  '(eshell-save-history-on-exit t)
- '(fill-column 80)
+ '(fill-column 79)
  '(flyspell-default-dictionary "francais")
  '(flyspell-issue-welcome-flag nil)
  '(glasses-face (quote bold))
@@ -101,7 +101,7 @@
  '(recentf-exclude (quote (":")))
  '(recentf-mode t nil (recentf))
  '(recentf-save-file "~/.emacs-recentf")
- '(reftex-plug-into-AUCTeX t t)
+ '(reftex-plug-into-AUCTeX t)
  '(save-place-limit 100)
  '(sawfish-extra-keyword-list (quote ("add-frame-style" "call-after-load" "call-after-property-changed" "call-after-state-changed" "custom-set-property" "define" "define-structure" "export" "open")))
  '(sawfish-warning-keyword-list (quote ("fixme" "FIXME" "Fixme" "fix me" "Fix me" "!!!" "Grrr" "Bummer" "todo" "TODO" "Todo")))
@@ -181,6 +181,8 @@
  '(show-paren-match-face ((t (:background "black" :foreground "red" :weight bold))))
  '(show-paren-mismatch-face ((t (:background "magenta" :foreground "white" :weight bold))))
  '(tabbar-default-face ((t (:inherit variable-pitch :background "gray72" :foreground "gray30" :height 0.8))))
+ '(tabbar-selected-face ((t (:inherit tabbar-default-face :foreground "blue" :box (:line-width 2 :color "white" :style pressed-button)))))
+ '(tabbar-unselected-face ((t (:inherit tabbar-default-face :box (:line-width 2 :color "white" :style released-button)))))
  '(underline ((t (:foreground "seagreen3" :underline t))))
  '(w3-style-face-00001 ((t (:underline nil :weight normal :height 150))))
  '(w3-style-face-00002 ((t (:underline nil))))
